# aerial_robot_recognition

aerial_robot_pcl/: CMakeLists.txt  package.xml
aerial_robot_pcl/cfg/: GroundPlaneDetection.cfg
aerial_robot_pcl/include/aerial_robot_pcl/: ground_plane_detection.h
aerial_robot_pcl/plugins/nodelet/: aerial_robot_pcl_nodelet.xml
aerial_robot_pcl/src/: ground_plane_detection.cpp
