<?xml version="1.0"?>
<package format="2">
  <name>aerial_robot_pcl</name>
  <version>0.0.0</version>
  <description>The aerial_robot_pcl package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>jsk_topic_tools</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_recognition_utils</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>jsk_pcl_ros</depend>
  <depend>eigen_conversions</depend>
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/aerial_robot_pcl_nodelet.xml"/>
  </export>
</package>
